Add post tagging functionality
closes #367
closes #368

- Adds Tag model with a many-to-many relationship with Post
- Adds Tag API to retrieve all previously used Tags (needed for suggestions)
- Allows setting and retrieval of Tags for a post through the Post's existing API endpoints.
- Hooks up the editor's tag suggestion box to the Ghost install's previously used tags
- Tidies the client code for adding tags, and encapsulates the functionality into a Backbone view

--- a/core/shared/lang/en.json
+++ b/core/shared/lang/en.json
@@ -5,7 +5,7 @@
     "admin.navbar.settings": "Settings",
 
     "__SECTION__": "icons",
-    "icon.category.label": "Category",
+    "icon.tag.label": "Tag",
     "icon.faq.label": "?",
     "icon.faq.markdown.title": "What is Markdown?",
     "icon.full_screen.label": "Full Screen",
