Improved russian translation

--- a/ghost/i18n/locales/ru/comments.json
+++ b/ghost/i18n/locales/ru/comments.json
@@ -1,8 +1,8 @@
 {
     "{{amount}} characters left": "{{amount}} символа(ов) осталось",
     "{{amount}} comments": "{{amount}} комментария(ев)",
-    "{{amount}} hrs ago": "{{amount}} часа(ов) назад",
-    "{{amount}} mins ago": "{{amount}} минут(ы) назад",
+    "{{amount}} hrs ago": "{{amount}} ч. назад",
+    "{{amount}} mins ago": "{{amount}} мин. назад",
     "{{amount}} more": "ещё {{amount}}",
     "1 comment": "1 комментарий",
     "Add comment": "Добавить комментарий",
@@ -32,7 +32,7 @@
     "Hidden for members": "Скрыто для участников",
     "Hide": "Скрыть",
     "Hide comment": "Скрыть комментарий",
-    "Jamie Larson": "Павел Бид",
+    "Jamie Larson": "Полное имя",
     "Join the discussion": "Присоединиться к обсуждению",
     "Just now": "Сейчас",
     "Load more ({{amount}})": "Загрузить ещё ({{amount}})",
