--- a/ghost/i18n/locales/ru/newsletter.json
+++ b/ghost/i18n/locales/ru/newsletter.json
@@ -8,7 +8,7 @@
     "Less like this": "Меньше такого",
     "Manage subscription": "Управление подпиской",
     "Member since": "Участник с",
-    "More like this": "Больше такого",
+    "More like this": "Больше",
     "Name": "Имя",
     "paid": "платным",
     "Subscription details": "Детали подписки",
