--- a/ghost/i18n/locales/ru/ghost.json
+++ b/ghost/i18n/locales/ru/ghost.json
@@ -8,24 +8,24 @@
     "Confirm your email update for {{siteTitle}}!": "Подтвердите обновление email адреса на {{siteTitle}}!",
     "Confirm your subscription to {{siteTitle}}": "Подтвердите подписку на {{siteTitle}}",
     "For your security, the link will expire in 24 hours time.": "В целях вашей безопасности ссылка действительна в течение 24 часов.",
-    "Hey there,": "Привет,",
-    "Hey there!": "Привет!",
-    "If you did not make this request, you can safely ignore this email.": "Если вы этого не делали, можете смело игнорировать это письмо.",
-    "If you did not make this request, you can simply delete this message.": "Если вы этого не делали, можете просто удалить это сообщение.",
+    "Hey there,": "Здравствуйте,",
+    "Hey there!": "Здравствуйте!",
+    "If you did not make this request, you can safely ignore this email.": "Если Вы этого не делали, можете игнорировать это письмо.",
+    "If you did not make this request, you can simply delete this message.": "Если Вы этого не делали, можете просто удалить это сообщение.",
     "Please confirm your email address with this link:": "Пожалуйста, подтвердите свой email адрес, перейдя по этой ссылке:",
-    "Secure sign in link for {{siteTitle}}": "Ссылка для безопасного входа в систему для {{siteTitle}}",
+    "Secure sign in link for {{siteTitle}}": "Ссылка для безопасного входа в аккаунт в {{siteTitle}}",
     "See you soon!": "До скорой встречи!",
     "Sent to {{email}}": "Отправлено на {{email}}",
     "Sign in": "Войти",
-    "Sign in to {{siteTitle}}": "Войти на {{siteTitle}}",
+    "Sign in to {{siteTitle}}": "Войти в {{siteTitle}}",
     "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "Нажмите на ссылку ниже, чтобы завершить процесс регистрации на {{siteTitle}} и автоматически войти:",
-    "Thank you for signing up to {{siteTitle}}!": "Спасибо за регистрацию на {{siteTitle}}!",
+    "Thank you for signing up to {{siteTitle}}!": "Спасибо за регистрацию в {{siteTitle}}!",
     "Thank you for subscribing to {{siteTitle}}!": "Спасибо за подписку на {{siteTitle}}!",
     "Thank you for subscribing to {{siteTitle}}.": "Спасибо за подписку на {{siteTitle}}.",
     "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "Спасибо за подписку на {{siteTitle}}. Нажмите на ссылку ниже, чтобы автоматически войти:",
     "This email address will not be used.": "Этот email адрес не будет использоваться.",
-    "Welcome back to {{siteTitle}}!": "Добро пожаловать на {{siteTitle}}, с возвращением!",
-    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "С возвращением! Используйте эту ссылку для безопасного входа в свою учётную запись на {{siteTitle}}:",
+    "Welcome back to {{siteTitle}}!": "Добро пожаловать в {{siteTitle}}, с возвращением!",
+    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "С возвращением! Используйте эту ссылку для входа в свой аккаунт в {{siteTitle}}:",
     "You can also copy & paste this URL into your browser:": "Вы также можете скопировать и вставить этот URL-адрес в свой браузер:",
     "You will not be signed up, and no account will be created for you.": "Вы не будете зарегистрированы, и для вас не будет создана учётная запись.",
     "You will not be subscribed.": "Вы не будете подписаны.",
