Fixed Arabic translation

--- a/ghost/i18n/locales/ar/comments.json
+++ b/ghost/i18n/locales/ar/comments.json
@@ -5,66 +5,66 @@
     "{{amount}} mins ago": "منذ {{amount}}  دقيقة",
     "{{amount}} more": "{{amount}}  المزيد",
     "1 comment": "تعليق واحد",
-    "Add comment": "اضف تعليق",
-    "Add context to your comment, share your name and expertise to foster a healthy discussion.": "قم بإضافة سياق لتعليقك، شارك اسمك و مجال خبرتك لكي نرعى محادثة مثمرة",
-    "Add reply": "ردّ",
-    "Already a member?": "هل انت مسجل بالفعل؟",
+    "Add comment": "إضافة تعليق",
+    "Add context to your comment, share your name and expertise to foster a healthy discussion.": "قم بإضافة سياق لتعليقك، شارك اسمك ومجال خبرتك لكي نرعى محادثة مثمرة",
+    "Add reply": "إضافة رد",
+    "Already a member?": "هل أنت مسجل بالفعل؟",
     "Anonymous": "مجهول",
-    "Are you sure?": "",
-    "Become a member of {{publication}} to start commenting.": "يجب أن تصبح عضوًا فى {{publication}}  لتستطيع التعليق",
-    "Become a paid member of {{publication}} to start commenting.": "يجب ان تكون عضويتك مدفوعة فى {{publication}} لكي تستطيع التعليق",
+    "Are you sure?": "هل أنت متأكد؟",
+    "Become a member of {{publication}} to start commenting.": "يجب أن تصبح عضوًا في {{publication}} لتستطيع التعليق",
+    "Become a paid member of {{publication}} to start commenting.": "يجب أن تكون عضويتك مدفوعة في {{publication}} لكي تستطيع التعليق",
     "Cancel": "إلغاء",
     "Comment": "تعليق",
-    "Complete your profile": "إكمال ملفك الشخصى",
+    "Complete your profile": "إكمال ملفك الشخصي",
     "Delete": "حذف",
-    "Deleted": "",
-    "Deleted member": "الاعضاء المحذوفين",
-    "Deleting": "",
+    "Deleted": "تم الحذف",
+    "Deleted member": "الأعضاء المحذوفين",
+    "Deleting": "جاري الحذف",
     "Discussion": "النقاش",
     "Edit": "تعديل",
-    "Edit this comment": "عدّل هذا التعليق",
+    "Edit this comment": "تعديل هذا التعليق",
     "edited": "تم التعديل",
     "Enter your name": "اكتب اسمك",
     "Expertise": "مجال تخصصك",
     "Founder @ Acme Inc": "مؤسس لدى شركة أكمي",
     "Full-time parent": "أب بدوام كامل",
     "Head of Marketing at Acme, Inc": "رئيس وحدة التسويق لدى شركة أكمى",
-    "Hidden for members": "",
-    "Hide": "اخفاء",
-    "Hide comment": "اخف التعليق",
-    "Jamie Larson": "فلان الفلانى",
-    "Join the discussion": "انضم للمحادثة",
+    "Hidden for members": "مخفي للعضو",
+    "Hide": "إخفاء",
+    "Hide comment": "إخفاء التعليق",
+    "Jamie Larson": "فلان الفلاني",
+    "Join the discussion": "الانضمام للمحادثة",
     "Just now": "الآن",
-    "Load more ({{amount}})": "",
+    "Load more ({{amount}})": "تحميل ({{amount}}) إضافية ",
     "Local resident": "مقيم محلى",
-    "Member discussion": "مناقشة الاعضاء",
+    "Member discussion": "مناقشة الأعضاء",
     "Name": "الاسم",
-    "Neurosurgeon": "جراح المخ و الاعصاب",
-    "Once deleted, this comment can’t be recovered.": "",
+    "Neurosurgeon": "جراحة مخ وأعصاب",
+    "Once deleted, this comment can’t be recovered.": "بمجرد حذف التعليق لا يمكن استعادته",
     "One hour ago": "منذ ساعة واحدة",
     "One min ago": " منذ دقيقة واحدة",
-    "removed": "",
-    "Replied to": "",
+    "removed": "تمت إزالته",
+    "Replied to": "تم الرد على",
     "Reply": "رد",
-    "Reply to": "",
+    "Reply to": "الرد على",
     "Reply to comment": "رد على هذا التعليق",
     "Report": "الإبلاغ",
-    "Report comment": "ابلغ عن هذا التعليق",
+    "Report comment": "إبلاغ عن التعليق",
     "Report this comment?": "الإبلاغ عن التعليق؟",
     "Save": "حفظ",
-    "Sending": "جارى الارسال",
-    "Sent": "تم الارسال",
-    "Show": "اظهر",
-    "Show {{amount}} more replies": "اظهر {{amount}} ردود",
-    "Show 1 more reply": "اظهر تعليق وحيد",
-    "Show comment": "اظهر التعليق",
+    "Sending": "جارى الإرسال",
+    "Sent": "تم الإرسال",
+    "Show": "إظهار",
+    "Show {{amount}} more replies": "إظهار {{amount}} ردود",
+    "Show 1 more reply": "إظهار تعليق وحيد",
+    "Show comment": "إظهار التعليق",
     "Sign in": "تسجيل الدخول",
     "Sign up now": "قم بالتسجيل الآن",
     "Sort by": "ترتيب بحسب",
     "Start the conversation": "ابدأ النقاش",
-    "This comment has been hidden.": "تم اخفاء هذا التعليق",
+    "This comment has been hidden.": "تم إخفاء هذا التعليق",
     "This comment has been removed.": "تم حذف هذا التعليق",
-    "Upgrade now": "قم بالترقية الآن",
+    "Upgrade now": "القيام بالترقية الآن",
     "Yesterday": "أمس",
-    "Your request will be sent to the owner of this site.": "سيتم ارسال طلبك لصاحب الموقع"
+    "Your request will be sent to the owner of this site.": "سيتم إرسال طلبك لمالك هذا الموقع"
 }
