--- a/ghost/i18n/locales/ar/ghost.json
+++ b/ghost/i18n/locales/ar/ghost.json
@@ -1,34 +1,34 @@
 {
     "All the best!": "مع خالص التقدير!",
-    "Complete signup for {{siteTitle}}!": "اكمل التسجيل فى {{siteTitle}}",
+    "Complete signup for {{siteTitle}}!": "إكمال التسجيل في {{siteTitle}}",
     "Complete your sign up to {{siteTitle}}!": "أكمل تسجيلك في {{siteTitle}}!",
-    "Confirm email address": "قم بتأكيد بريدك الإلكترونى",
-    "Confirm signup": "أكدّ حسابك",
-    "Confirm your email address": "قم بتأكيد عنوان البريد الالكترونى",
-    "Confirm your email update for {{siteTitle}}!": "تأكيد تحديث بريدك الاكتروني لـ {{siteTitle}}!",
+    "Confirm email address": "تأكيد البريد الإلكتروني",
+    "Confirm signup": "تأكيد التسجيل",
+    "Confirm your email address": "تأكيد عنوان البريد الإلكتروني",
+    "Confirm your email update for {{siteTitle}}!": "تأكيد تحديث البريد الإلكتروني لـ {{siteTitle}}!",
     "Confirm your subscription to {{siteTitle}}": "تأكيد اشتراكك في {{siteTitle}}!",
-    "For your security, the link will expire in 24 hours time.": "لدواعي الحماية، سيتنتهي فعالية الرابط خلال اربع وعشرون ساعة.",
+    "For your security, the link will expire in 24 hours time.": "لدواعي الحماية، سوف تنتهي صلاحية الرابط خلال 24 ساعة.",
     "Hey there,": "مرحبًا بك،",
     "Hey there!": "مرحبًا بك!",
-    "If you did not make this request, you can safely ignore this email.": "إذا لم تقم بهذا الطلب، يمكنك تجاهل هذه الرسالة بكل امان.",
-    "If you did not make this request, you can simply delete this message.": "إذا لم تقم بهذا الطلب، يمكنك ببساطة حذف هذه الرسالة.",
-    "Please confirm your email address with this link:": "برجاء تأكيد بريدك الاكتروني من خلال الرابط:",
-    "Secure sign in link for {{siteTitle}}": "رابط تسجيل الدخول الامن الى {{siteTitle}}",
-    "See you soon!": "نراكم قريبا!",
-    "Sent to {{email}}": "تم الارسال الى {{email}}",
+    "If you did not make this request, you can safely ignore this email.": "إذا لم تقم أنت بهذا الطلب، يمكنك تجاهل هذه الرسالة بكل أمان.",
+    "If you did not make this request, you can simply delete this message.": "إذا لم أنت تقم بهذا الطلب، يمكنك ببساطة حذف هذه الرسالة.",
+    "Please confirm your email address with this link:": "يرجى تأكيد بريدك الإلكتروني من خلال الرابط:",
+    "Secure sign in link for {{siteTitle}}": "رابط تسجيل الدخول الآمن إلى {{siteTitle}}",
+    "See you soon!": "نراكم قريباً!",
+    "Sent to {{email}}": "تم الإرسال إلى {{email}}",
     "Sign in": "تسجيل الدخول",
-    "Sign in to {{siteTitle}}": "تسجيل الدخول الى {{siteTitle}}",
-    "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "انقر الرابط ادناه لاكمال عملية التسجيل في {{siteTitle}}, والدخول مباشرة:",
-    "Thank you for signing up to {{siteTitle}}!": "شكرا لتسجيلك في {{siteTitle}}!",
-    "Thank you for subscribing to {{siteTitle}}!": "شكرا لاشتراكك في {{siteTitle}}!",
-    "Thank you for subscribing to {{siteTitle}}.": "شكرا لاشتراكك في {{siteTitle}}",
-    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "شكرا لاشتراكك في {{siteTitle}}. انقر الرابط ادناه لتسجيل الدخول:",
-    "This email address will not be used.": "هذا البريد الاكتروني لن يتم استخدامه.",
-    "Welcome back to {{siteTitle}}!": "مرحبا بك مرة اخرى في {{siteTitle}}!",
-    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "مرحبا بك مرة اخرى! استخدم هذا الرابط لتسجيل الدخول في حساب {{siteTitle}}:",
-    "You can also copy & paste this URL into your browser:": "بامكانك ايضا نسخ ولصق هذا الرابط في متصفحك:",
-    "You will not be signed up, and no account will be created for you.": "لم يتم تسجيلك او لم بتم انشاء حساب لك.",
-    "You will not be subscribed.": "لم يتم اشتراكك.",
-    "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "أنت على بعد خطوة من الاشتراك في {{siteTitle}} - برجاء تأكيد البريد الاكتروني من خلال هذا الرابط:",
+    "Sign in to {{siteTitle}}": "تسجيل الدخول إلى {{siteTitle}}",
+    "Tap the link below to complete the signup process for {{siteTitle}}, and be automatically signed in:": "انقر الرابط أدناه لإكمال عملية التسجيل في {{siteTitle}}, والدخول مباشرة:",
+    "Thank you for signing up to {{siteTitle}}!": "شكراً لتسجيلك في {{siteTitle}}!",
+    "Thank you for subscribing to {{siteTitle}}!": "شكراً لاشتراكك في {{siteTitle}}!",
+    "Thank you for subscribing to {{siteTitle}}.": "شكراً لاشتراكك في {{siteTitle}}",
+    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "شكراً لاشتراكك في {{siteTitle}}. انقر الرابط أدناه لتسجيل الدخول:",
+    "This email address will not be used.": "هذا البريد الإلكتروني لن يتم استخدامه.",
+    "Welcome back to {{siteTitle}}!": "مرحبا بك مرة أخرى في {{siteTitle}}!",
+    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "مرحبا بك مرة أخرى! استخدم هذا الرابط لتسجيل الدخول في حساب {{siteTitle}}:",
+    "You can also copy & paste this URL into your browser:": "بإمكانك أيضاً نسخ ولصق هذا الرابط في متصفحك:",
+    "You will not be signed up, and no account will be created for you.": "لن يتم تسجيلك ولن بتم إنشاء حساب لك.",
+    "You will not be subscribed.": "لن تتم عملية اشتراكك.",
+    "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "أنت على بعد خطوة من الاشتراك في {{siteTitle}} - يرجى تأكيد البريد الإلكتروني من خلال هذا الرابط:",
     "You're one tap away from subscribing to {{siteTitle}}!": "أنت على بعد خطوة من الاشتراك في {{siteTitle}}"
 }
