--- a/ghost/i18n/locales/ar/signup-form.json
+++ b/ghost/i18n/locales/ar/signup-form.json
@@ -1,9 +1,9 @@
 {
-    "Email sent": "تم ارسال البريد الالكترونى",
-    "Now check your email!": "قم بتفقد بريدك الالكترونى",
-    "Please enter a valid email address": "من فضلك قم بإدخال بريدك الالكترونى بشكل صحيح",
-    "Something went wrong, please try again.": "حدث خطأ ما! من فضلك اعد المحاولة",
-    "Subscribe": "اشترك",
-    "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "لإكمال التسجيل قم بالضغط على الرابط الموجود فى الرسالة التى وصلت لبريدك الالكترونى، إذا لم تصلّك الرسالة خلال 3 دقائق قم بتفقد صندوق الرسائل المزعجة ",
-    "Your email address": "بريدك الالكترونى"
+    "Email sent": "تم إرسال البريد الإلكتروني",
+    "Now check your email!": "قم بتفقد بريدك الإلكتروني",
+    "Please enter a valid email address": "من فضلك قم بإدخال بريدك الإلكتروني بشكل صحيح",
+    "Something went wrong, please try again.": "حدث خطأ ما! من فضلك أعد المحاولة",
+    "Subscribe": "اشتراك",
+    "To complete signup, click the confirmation link in your inbox. If it doesn't arrive within 3 minutes, check your spam folder!": "لإكمال التسجيل قم بالضغط على الرابط الموجود في الرسالة التي وصلت إلى بريدك الإلكتروني، إذا لم تصلّك الرسالة خلال 3 دقائق قم بتفقد صندوق الرسائل المزعجة ",
+    "Your email address": "بريدك الإلكتروني"
 }
