Update Arabic translations for comments, ghost, portal.

--- a/ghost/i18n/locales/ar/comments.json
+++ b/ghost/i18n/locales/ar/comments.json
@@ -3,7 +3,7 @@
     "{{amount}} comments": "{{amount}}  تعليق/ات",
     "{{amount}} hrs ago": "منذ {{amount}}  ساعات",
     "{{amount}} mins ago": "منذ {{amount}}  دقيقة",
-    "{{amount}} more": "{{amount}}  المزيد",
+    "{{amount}} more": "{{amount}} المزيد",
     "1 comment": "تعليق واحد",
     "Add comment": "إضافة تعليق",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "قم بإضافة سياق لتعليقك، شارك اسمك ومجال خبرتك لكي نرعى محادثة مثمرة",
@@ -18,7 +18,7 @@
     "Complete your profile": "إكمال ملفك الشخصي",
     "Delete": "حذف",
     "Deleted": "تم الحذف",
-    "Deleted member": "الأعضاء المحذوفين",
+    "Deleted member": "الأعضاء المحذوفون",
     "Deleting": "جاري الحذف",
     "Discussion": "النقاش",
     "Edit": "تعديل",
@@ -39,7 +39,7 @@
     "Local resident": "مقيم محلى",
     "Member discussion": "مناقشة الأعضاء",
     "Name": "الاسم",
-    "Neurosurgeon": "جراحة مخ وأعصاب",
+    "Neurosurgeon": "جراح أعصاب",
     "Once deleted, this comment can’t be recovered.": "بمجرد حذف التعليق لا يمكن استعادته",
     "One hour ago": "منذ ساعة واحدة",
     "One min ago": " منذ دقيقة واحدة",
