--- a/ghost/i18n/locales/ar/ghost.json
+++ b/ghost/i18n/locales/ar/ghost.json
@@ -1,7 +1,7 @@
 {
     "All the best!": "مع خالص التقدير!",
     "Complete signup for {{siteTitle}}!": "إكمال التسجيل في {{siteTitle}}",
-    "Complete your sign up to {{siteTitle}}!": "أكمل تسجيلك في {{siteTitle}}!",
+    "Complete your sign up to {{siteTitle}}!": "إكمال تسجيلك في {{siteTitle}}!",
     "Confirm email address": "تأكيد البريد الإلكتروني",
     "Confirm signup": "تأكيد التسجيل",
     "Confirm your email address": "تأكيد عنوان البريد الإلكتروني",
