--- a/ghost/i18n/locales/ar/portal.json
+++ b/ghost/i18n/locales/ar/portal.json
@@ -95,7 +95,7 @@
     "If you're not receiving the email newsletter you've subscribed to, here are a few things to check.": ".إذا كنت لا تتلقى النشرة الإخبارية التي اشتركت فيها، إليك بعض الأمور التي يجب التحقق منها ",
     "If you've completed all these checks and you're still not receiving emails, you can reach out to get support by contacting {{supportAddress}}.": ".{{supportAddress}} إذا كنت قد أتممت جميع هذه الفحوصات وما زلت لا تتلقى الرسائل الإلكترونية، يمكنك التواصل للحصول على الدعم عن طريق الاتصال بـ",
     "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "في حالة تلقي فشل دائم عند محاولة إرسال نشرة إخبارية، سيتم تعطيل الرسائل الإلكترونية على الحساب",
-    "In your email client add {{senderEmail}} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": ".إلى قائمة جهات الاتصال الخاصة بك. هذا يخبر مزود خدمة البريد الإلكتروني أن الرسائل المرسلة من هذا العنوان يجب أن تعتبر موثوقة{{senderEmail}} في تطبيق البريد الإلكتروني الخاص بك، أضف",
+    "In your email client add {{senderEmail}} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": ".إلى قائمة جهات الاتصال الخاصة بك. هذا يخبر مزود خدمة البريد الإلكتروني أن الرسائل المرسلة من هذا العنوان يجب أن تعتبر موثوقة{{senderEmail}} في تطبيق البريد الإلكتروني الخاص بك، قم بإضافة",
     "Invalid email address": ".عنوان البريد الإلكتروني غير صالح",
     "Jamie Larson": "فلان الفلاني",
     "jamie@example.com": "folan@mesal.com",
@@ -131,14 +131,14 @@
     "Save": "حفظ",
     "Send an email and say hi!": "!ًأرسل بريدًا الكترونيًا وقل مرحبًا",
     "Send an email to {{senderEmail}} and say hello. This can also help signal to your mail provider that emails to and from this address should be trusted.": ".وقل مرحبًا. يمكن أن يساعدك ذلك أيضًا في إبلاغ مزود البريد الخاص بك بأن الرسائل المرسلةإلى ومن هذا العنوانيجب أن تكون موثوقة {{senderEmail}} أرسل بريدًا الكترونيًا إلى ",
-    "Sending login link...": "",
+    "Sending login link...": "جاري إرسال الرابط",
     "Sending...": "...جاري الإرسال",
     "Show all": "عرض الكل",
     "Sign in": "تسجيل الدخول",
     "Sign out": "تسجيل الخروج",
     "Sign up": "إنشاء حساب",
     "Signup error: Invalid link": "خطأ في التسجيل: الرابط غير صالح",
-    "Signups from this email domain are currently restricted.": "",
+    "Signups from this email domain are currently restricted.": "تسجيل الدخول من هذا النطاق البريدي مقيد حاليًا.",
     "Something went wrong, please try again later.": ".حدث خطأ ما، يرجى المحاولة مرة أخرى لاحقًا",
     "Sorry, no recommendations are available right now.": ".عذرًا، لا توجد توصيات متاحة حاليًا",
     "Sorry, that didn’t work.": ".عذرًا، لم ينجح ذلك",
@@ -161,7 +161,7 @@
     "Thanks for the feedback!": "شكراً لمشاركتك رأيك!",
     "That didn't go to plan": "لم تسر الأمور على ما يرام",
     "The email address we have for you is {{memberEmail}} — if that's not correct, you can update it in your <button>account settings area</button>.": ".</button> إعدادات الحساب<button> إذا لم يكن صحيحًا، يمكنك تحديثه في منطقة {{memberEmail}} عنوان البريد الإلكتروني الذي لديك لك هو",
-    "There was a problem submitting your feedback. Please try again a little later.": "",
+    "There was a problem submitting your feedback. Please try again a little later.": "حدثت مشكلة أثناء إرسال رأيك. يرجى المحاولة مرة أخرى في وقت لاحق.",
     "There was an error cancelling your subscription, please try again.": ".حدث خطأ أثناء إلغاء الاشتراك، يرجى المحاولة مرة أخرى",
     "There was an error continuing your subscription, please try again.": ".حدث خطأ أثناء الاشتراك، يرجى المحاولة مرة أخرى",
     "There was an error processing your payment. Please try again.": ".حدث خطأ أثناء معالجة دفعك، يرجى المحاولة مرة أخرى",
