🌐 Added translation logic for "Add a personal note" in Tips & Donations
closes #21766 

- added "Add a personal note" string to portal's API request for Tips and Donations

--- a/ghost/i18n/locales/af/portal.json
+++ b/ghost/i18n/locales/af/portal.json
@@ -15,6 +15,7 @@
     "Account": "Rekening",
     "Account details updated successfully": "",
     "Account settings": "Rekening instellings",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Na afloop van die gratis proeftydperk sal u die vasgestelde pry vir die vlak wat u gekies het, betaal. U kan altyd voor die tyd kanselleer.",
     "Already a member?": "Is u reeds 'n lid?",
     "An error occurred": "",
