--- a/ghost/i18n/locales/bg/portal.json
+++ b/ghost/i18n/locales/bg/portal.json
@@ -15,6 +15,7 @@
     "Account": "Профил",
     "Account details updated successfully": "Настройките бяха успешно обновени",
     "Account settings": "Настройки",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "След приключване на безплатния период ще бъдете таксувани според обявените цени. Можете да се откажете преди изтичането на безплатния период.",
     "Already a member?": "Абонат ли сте вече?",
     "An error occurred": "Възникна грешка",
