--- a/ghost/i18n/locales/context.json
+++ b/ghost/i18n/locales/context.json
@@ -6,6 +6,7 @@
     "Account": "A label in Portal for your account area",
     "Account details updated successfully": "",
     "Account settings": "A label in Portal for your account settings",
+    "Add a personal note": "Becomes the field label for donations in Stripe",
     "Add comment": "Button text to post a comment",
     "Add context to your comment, share your name and expertise to foster a healthy discussion.": "Invitation to include additional info when commenting",
     "Add reply": "Button text to post your reply",
