--- a/ghost/i18n/locales/cs/portal.json
+++ b/ghost/i18n/locales/cs/portal.json
@@ -15,6 +15,7 @@
     "Account": "Účet",
     "Account details updated successfully": "",
     "Account settings": "Nastavení účtu",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Po skončení zkušební doby vám bude účtována běžná cena pro vybranou úroveň. Vždy můžete předtím zrušit odběr.",
     "Already a member?": "Již jste členem?",
     "An error occurred": "",
