--- a/ghost/i18n/locales/da/portal.json
+++ b/ghost/i18n/locales/da/portal.json
@@ -15,6 +15,7 @@
     "Account": "Konto",
     "Account details updated successfully": "Kontooplysningerne blev opdateret",
     "Account settings": "Kontoindstillinger",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Når din gratis prøveperiode udløber, vil du blive opkrævet den normale pris for det abonnement du har valgt. Du kan selvfølgelig altid annullere dit abonnement inden.",
     "Already a member?": "Er du allerede medlem?",
     "An error occurred": "Der opstod en fejl",
