--- a/ghost/i18n/locales/el/portal.json
+++ b/ghost/i18n/locales/el/portal.json
@@ -15,6 +15,7 @@
     "Account": "Λογαριασμός",
     "Account details updated successfully": "",
     "Account settings": "Ρυθμίσεις λογαριασμού",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Μετά το τέλος της δωρεάν δοκιμής, θα χρεωθείτε την κανονική τιμή για το επίπεδο που έχετε επιλέξει. Μπορείτε πάντα να ακυρώσετε πριν από τότε.",
     "Already a member?": "Ήδη μέλος;",
     "An error occurred": "",
