--- a/ghost/i18n/locales/es/portal.json
+++ b/ghost/i18n/locales/es/portal.json
@@ -15,6 +15,7 @@
     "Account": "Cuenta",
     "Account details updated successfully": "Los detalles de la cuenta se actualizaron con éxito",
     "Account settings": "Configuración de la cuenta",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Después de que finalice el período de prueba gratuito, se te cobrará el precio regular del nivel que hayas elegido. Siempre puedes cancelar antes de eso.",
     "Already a member?": "¿Ya eres miembro?",
     "An error occurred": "Ocurrió un error",
