--- a/ghost/i18n/locales/fa/portal.json
+++ b/ghost/i18n/locales/fa/portal.json
@@ -15,6 +15,7 @@
     "Account": "حساب کاربری",
     "Account details updated successfully": "",
     "Account settings": "تنظیمات حساب کاربری",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "پس از این\u200cکه دوره رایکان شما پایان یابد، براساس بسته\u200cی انتخابی شما مبلغی از حساب شما برداشت می\u200cشود. شما همیشه می\u200cتوانید قبل از آن تاریخ، بسته\u200cی خود را تغییر و یا لغو کنید.",
     "Already a member?": "عضو هستید؟",
     "An error occurred": "",
