--- a/ghost/i18n/locales/fi/portal.json
+++ b/ghost/i18n/locales/fi/portal.json
@@ -15,6 +15,7 @@
     "Account": "Oma tili",
     "Account details updated successfully": "",
     "Account settings": "Tilin asetukset",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Kun ilmainen kokeilusi loppuu, sinulta veloitetaan valitsemasi tilauksen kuukausimaksu. Voit aina peruuttaa tilauksesi ennen tätä.",
     "Already a member?": "Oletko jo jäsen?",
     "An error occurred": "",
