--- a/ghost/i18n/locales/he/portal.json
+++ b/ghost/i18n/locales/he/portal.json
@@ -15,6 +15,7 @@
     "Account": "חשבון",
     "Account details updated successfully": "פרטי החשבון עודכנו בהצלחה",
     "Account settings": "הגדרות חשבון",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "לאחר תום תקופת הניסיון החינמית, תחויבו במחיר הרגיל של התוכנית שבחרתם. תוכלו לבטל בכל עת לפני כן.",
     "Already a member?": "כבר רשומים?",
     "An error occurred": "קרתה שגיאה",
