--- a/ghost/i18n/locales/hi/portal.json
+++ b/ghost/i18n/locales/hi/portal.json
@@ -15,6 +15,7 @@
     "Account": "खाता",
     "Account details updated successfully": "",
     "Account settings": "खाता सेटिंग्स",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "मुफ्त परीक्षण समाप्त होने के बाद, आपको आपके द्वारा चुने गए स्तर के लिए नियमित कीमत पर शुल्क लिया जाएगा। आप तब तक किसी भी समय रद्द कर सकते हैं।",
     "Already a member?": "पहले से ही सदस्य हैं?",
     "An error occurred": "",
