--- a/ghost/i18n/locales/hr/portal.json
+++ b/ghost/i18n/locales/hr/portal.json
@@ -15,6 +15,7 @@
     "Account": "Vaš račun",
     "Account details updated successfully": "",
     "Account settings": "Podešavanje vašeg računa",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Nakon isteka probnog perioda, izvršit će se naplata odabranog plana pretplate. Uvijek možete otkazati pretplatu prije toga.",
     "Already a member?": "Već imate račun?",
     "An error occurred": "",
