--- a/ghost/i18n/locales/it/portal.json
+++ b/ghost/i18n/locales/it/portal.json
@@ -15,6 +15,7 @@
     "Account": "Account",
     "Account details updated successfully": "Dettagli dell'account aggiornati con successo",
     "Account settings": "Impostazioni account",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Al termine della prova gratuita, ti verrà addebitato il prezzo regolare del piano scelto. Puoi annullare in qualsiasi momento prima della scadenza.",
     "Already a member?": "Sei già iscritto?",
     "An error occurred": "Si è verificato un errore",
