--- a/ghost/i18n/locales/ko/portal.json
+++ b/ghost/i18n/locales/ko/portal.json
@@ -15,6 +15,7 @@
     "Account": "계정",
     "Account details updated successfully": "계정 정보가 성공적으로 업데이트되었어요",
     "Account settings": "계정 설정",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "무료 체험이 종료되면 선택한 요금제의 정상 가격이 청구돼요. 그 전에 언제든지 취소할 수 있어요.",
     "Already a member?": "이미 회원이신가요?",
     "An error occurred": "오류가 발생했어요",
