--- a/ghost/i18n/locales/lv/portal.json
+++ b/ghost/i18n/locales/lv/portal.json
@@ -15,6 +15,7 @@
     "Account": "Konts",
     "Account details updated successfully": "Konta informācija ir veiksmīgi atjaunināta",
     "Account settings": "Konta iestatījumi",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Pēc bezmaksas izmēģinājuma perioda beigām no jums tiks iekasēta parastā cena par jūsu izvēlēto līmeni. Jūs vienmēr varat atcelt pirms tam.",
     "Already a member?": "Vai jau esat dalībnieks?",
     "An error occurred": "Radās kļūda",
