--- a/ghost/i18n/locales/mk/portal.json
+++ b/ghost/i18n/locales/mk/portal.json
@@ -15,6 +15,7 @@
     "Account": "Сметка",
     "Account details updated successfully": "",
     "Account settings": "Поставки",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Откако пробниот период ќе истече, ќе ви биде наплатена регуларната цена за пакетот кој сте го избрале. Секогаш можете да откажете претходно.",
     "Already a member?": "Веќе сте член",
     "An error occurred": "",
