--- a/ghost/i18n/locales/pt-BR/portal.json
+++ b/ghost/i18n/locales/pt-BR/portal.json
@@ -15,6 +15,7 @@
     "Account": "Conta",
     "Account details updated successfully": "Detalhes da conta atualizados com sucesso",
     "Account settings": "Configurações de conta",
+    "Add a personal note": "Deixar comentário",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Quando o teste grátis acabar, será cobrado o preço normal do plano que você escolheu. Você sempre pode cancelar antes.",
     "Already a member?": "Já é membro?",
     "An error occurred": "Ocorreu um erro",
