--- a/ghost/i18n/locales/pt/portal.json
+++ b/ghost/i18n/locales/pt/portal.json
@@ -15,6 +15,7 @@
     "Account": "Conta",
     "Account details updated successfully": "",
     "Account settings": "Definições de conta",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Após o término do teste grátis, será cobrado o valor normal para o nível escolhido. Poderá sempre cancelar até esse momento, caso não deseje ser cobrado.",
     "Already a member?": "Já é membro?",
     "An error occurred": "",
