--- a/ghost/i18n/locales/ru/portal.json
+++ b/ghost/i18n/locales/ru/portal.json
@@ -15,6 +15,7 @@
     "Account": "Аккаунт",
     "Account details updated successfully": "Данные учётной записи успешно обновлены",
     "Account settings": "Настройки аккаунта",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "После окончания бесплатного периода с вас будут взиматься регулярные платежи по выбранному тарифу. До этого момента вы можете отменить подписку в любое время.",
     "Already a member?": "Уже есть аккаунт?",
     "An error occurred": "Упс! Произошла ошибка",
