--- a/ghost/i18n/locales/sk/portal.json
+++ b/ghost/i18n/locales/sk/portal.json
@@ -15,6 +15,7 @@
     "Account": "Účet",
     "Account details updated successfully": "Podrobnosti o účte boli úspešne aktualizované",
     "Account settings": "Nastavenia účtu",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Po uplynutí skúšobného obdobia vám bute účtovaná bežná cena pre vybrunú úrovenň. Vždy to môžte pred tým zrušiť",
     "Already a member?": "Ste už členom?",
     "An error occurred": "Vyskytla sa chyba",
