--- a/ghost/i18n/locales/sr/portal.json
+++ b/ghost/i18n/locales/sr/portal.json
@@ -15,6 +15,7 @@
     "Account": "Nalog",
     "Account details updated successfully": "",
     "Account settings": "Podešavanja naloga",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Nakon što besplatni probni period istekne, izvršiće se naplata po regularnoj ceni za nivo koji ste izabrali. Uvek možete da otkažete pretplatu pre toga.",
     "Already a member?": "Već ste član?",
     "An error occurred": "",
