--- a/ghost/i18n/locales/tr/portal.json
+++ b/ghost/i18n/locales/tr/portal.json
@@ -15,6 +15,7 @@
     "Account": "Hesap",
     "Account details updated successfully": "Hesap bilgileri başarıyla güncellendi",
     "Account settings": "Hesap ayarları",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Ücretsiz deneme süresi bittikten sonra seçtiğin kategorinin normal fiyatından ücretlendirileceksin. O zamana kadar her an iptal edebilirsin.",
     "Already a member?": "Zaten üye misin?",
     "An error occurred": "Bir hata meydana geldi",
