--- a/ghost/i18n/locales/zh-Hant/portal.json
+++ b/ghost/i18n/locales/zh-Hant/portal.json
@@ -15,6 +15,7 @@
     "Account": "帳號",
     "Account details updated successfully": "帳號資訊已更新成功",
     "Account settings": "帳號設定",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "免費試用結束後，您將支付所選方案的定價金額。在此之前，您可以隨時取消。",
     "Already a member?": "已經是會員了？",
     "An error occurred": "錯誤發生",
