--- a/ghost/i18n/locales/ar/portal.json
+++ b/ghost/i18n/locales/ar/portal.json
@@ -15,6 +15,7 @@
     "Account": "الحساب",
     "Account details updated successfully": ".تم تحديث تفاصيل الحساب بنجاح",
     "Account settings": "إعدادات الحساب",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": ".بعد انتهاء فترة التجربة المجانية، سيتم خصم السعر العادي للفئة التي اخترتها. يمكنك دائمًا إلغاء الاشتراك قبل ذلك",
     "Already a member?": "هل أنت عضو بالفعل؟",
     "An error occurred": "حدث خطأ",
