--- a/ghost/i18n/locales/bn/portal.json
+++ b/ghost/i18n/locales/bn/portal.json
@@ -15,6 +15,7 @@
     "Account": "অ্যাকাউন্ট",
     "Account details updated successfully": "",
     "Account settings": "অ্যাকাউন্ট সেটিংস",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "একটি ফ্রি ট্রায়াল শেষ হওয়ার পরে, আপনি যেই টিয়ারটি বেছে নিয়েছেন তার নিয়মিত মূল্য চার্জ করা হবে। আপনি যে কোনো সময় বাতিল করতে পারেন।",
     "Already a member?": "ইতিমধ্যেই সদস্য?",
     "An error occurred": "",
