--- a/ghost/i18n/locales/bs/portal.json
+++ b/ghost/i18n/locales/bs/portal.json
@@ -15,6 +15,7 @@
     "Account": "Račun",
     "Account details updated successfully": "",
     "Account settings": "Postavke računa",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Nakon isteka besplatnog probnog perioda, bit će ti naplaćena redovna cijena za plan koji si odabrao. Možeš otkazati članarinu prije toga.",
     "Already a member?": "Već si član?",
     "An error occurred": "",
