--- a/ghost/i18n/locales/ca/portal.json
+++ b/ghost/i18n/locales/ca/portal.json
@@ -15,6 +15,7 @@
     "Account": "Compte",
     "Account details updated successfully": "Detalls del compte actualitzats correctament",
     "Account settings": "Configuració del compte",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Després que finalitzi el període de prova gratuït, se't cobrarà el preu estipulat del nivell que hagis triat. Sempre pots cancel·lar abans que això passi.",
     "Already a member?": "Ja n'ets membre?",
     "An error occurred": "Ha succeït un error",
