--- a/ghost/i18n/locales/de-CH/portal.json
+++ b/ghost/i18n/locales/de-CH/portal.json
@@ -15,6 +15,7 @@
     "Account": "Konto",
     "Account details updated successfully": "",
     "Account settings": "Konto-Einstellungen",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Wenn das kostenlose Testabo endet, bezahlen Sie den regulären Preis für den gewählten Tarif. Sie können Ihr Abonnement jederzeit kündigen.",
     "Already a member?": "Bereits Mitglied?",
     "An error occurred": "",
