--- a/ghost/i18n/locales/eo/portal.json
+++ b/ghost/i18n/locales/eo/portal.json
@@ -15,6 +15,7 @@
     "Account": "Konto",
     "Account details updated successfully": "",
     "Account settings": "Kontagordoj",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Post senpaga provo finiĝos, vi pagos la regulan prezon por la nivelo, kiun vi elektis. Vi ĉiam povas nuligi antaŭ tiam.",
     "Already a member?": "Ĉu membro jam?",
     "An error occurred": "",
