--- a/ghost/i18n/locales/fr/portal.json
+++ b/ghost/i18n/locales/fr/portal.json
@@ -15,6 +15,7 @@
     "Account": "Compte",
     "Account details updated successfully": "Mise à jour réussie des données du compte",
     "Account settings": "Paramètres de compte",
+    "Add a personal note": "Ajouter une note personnelle",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "À la fin de la période d’essai gratuite, le prix normal de l’abonnement choisi sera facturé. Vous pourrez toujours l'annuler d’ici là.",
     "Already a member?": "Déjà abonné ?",
     "An error occurred": "Une erreur s'est produite",
