--- a/ghost/i18n/locales/gd/portal.json
+++ b/ghost/i18n/locales/gd/portal.json
@@ -15,6 +15,7 @@
     "Account": "Cunntas",
     "Account details updated successfully": "Chaidh roghainnean a' chunntais ùrachadh gu soirbheachail",
     "Account settings": "Roghainnean",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Bidh agad ri pàigheadh nuair a dh’fhalbhachas an ùine air an tionndadh triail agad. Faodaidh tu ga sguir dheth ron a shin ge-tà.",
     "Already a member?": "’Eil thu nad bhall mar-thà?",
     "An error occurred": "Thachair mearachd",
