--- a/ghost/i18n/locales/hu/portal.json
+++ b/ghost/i18n/locales/hu/portal.json
@@ -15,6 +15,7 @@
     "Account": "Fiók",
     "Account details updated successfully": "",
     "Account settings": "Fiók beállítások",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Az ingyenes próbaidőszak lejárta után a kiválasztott csomag normál díját fogjuk felszámolni. A feliratkozás bármikor ingyenesen lemondható a próbaidőszak alatt.",
     "Already a member?": "Már van fiókja?",
     "An error occurred": "",
