--- a/ghost/i18n/locales/id/portal.json
+++ b/ghost/i18n/locales/id/portal.json
@@ -15,6 +15,7 @@
     "Account": "Akun",
     "Account details updated successfully": "Detail akun berhasil diperbarui",
     "Account settings": "Pengaturan akun",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Setelah percobaan gratis berakhir, Anda akan dikenai harga normal untuk tingkatan yang dipilih. Anda selalu dapat membatalkannya sebelum masa percobaan gratis berakhir.",
     "Already a member?": "Sudah menjadi anggota?",
     "An error occurred": "Terjadi kesalahan",
