--- a/ghost/i18n/locales/is/portal.json
+++ b/ghost/i18n/locales/is/portal.json
@@ -15,6 +15,7 @@
     "Account": "Aðgangur",
     "Account details updated successfully": "",
     "Account settings": "Aðgangsstillingar",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Þegar prufutímabili lýkur muntu greiða venjulegt verð í samræmi við áskriftarleiðina sem þú valdir. Þú getur ávallt sagt upp áskriftinni áður en til þess kemur.",
     "Already a member?": "Ertu nú þegar með áskrift?",
     "An error occurred": "",
