--- a/ghost/i18n/locales/ja/portal.json
+++ b/ghost/i18n/locales/ja/portal.json
@@ -15,6 +15,7 @@
     "Account": "アカウント",
     "Account details updated successfully": "アカウント詳細が更新されました",
     "Account settings": "アカウント設定",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "無料期間が終了すると、選択したプランの通常価格が請求されます。それまではいつでもキャンセルできます。",
     "Already a member?": "すでに会員ですか？",
     "An error occurred": "エラーが発生しました",
