--- a/ghost/i18n/locales/kz/portal.json
+++ b/ghost/i18n/locales/kz/portal.json
@@ -15,6 +15,7 @@
     "Account": "Аккаунт",
     "Account details updated successfully": "",
     "Account settings": "Аккаунт баптаулары",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Тегін сынақ мерзімі аяқталғаннан кейін таңдаған деңгейіңіз үшін қалыпты баға төленеді. Оған дейін әрқашан бас тартуға болады.",
     "Already a member?": "Аккаунт бар ма?",
     "An error occurred": "",
