--- a/ghost/i18n/locales/lt/portal.json
+++ b/ghost/i18n/locales/lt/portal.json
@@ -15,6 +15,7 @@
     "Account": "Paskyra",
     "Account details updated successfully": "",
     "Account settings": "Paskyros nustatymai",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Pasibaigus nemokamam bandomajam laikotarpiui, bus nuskaičiuota įprasta pasirinkto prenumeratos tipo kaina. Bet kuriuo metu galite atšaukti prenumeratą.",
     "Already a member?": "Jau turite paskyrą?",
     "An error occurred": "",
