--- a/ghost/i18n/locales/ms/portal.json
+++ b/ghost/i18n/locales/ms/portal.json
@@ -15,6 +15,7 @@
     "Account": "Akaun",
     "Account details updated successfully": "",
     "Account settings": "Tetapan akaun",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Selepas tempoh percubaan percuma tamat, anda akan dicaj harga biasa untuk peringkat yang anda pilih. Anda sentiasa boleh membatalkan sebelum itu.",
     "Already a member?": "Sudah menjadi ahli?",
     "An error occurred": "",
