--- a/ghost/i18n/locales/nl/portal.json
+++ b/ghost/i18n/locales/nl/portal.json
@@ -15,6 +15,7 @@
     "Account": "Account",
     "Account details updated successfully": "Accountgegevens succesvol bijgewerkt",
     "Account settings": "Gegevens",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Na de proefperiode zal het normale tarief in rekening worden gebracht voor het door jou gekozen abonnement.",
     "Already a member?": "Al lid?",
     "An error occurred": "Er is een fout opgetreden",
