--- a/ghost/i18n/locales/nn/portal.json
+++ b/ghost/i18n/locales/nn/portal.json
@@ -15,6 +15,7 @@
     "Account": "Brukar",
     "Account details updated successfully": "",
     "Account settings": "Brukarinnstillingar",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Når den gratis prøveperioden er over vil du bli belasta den normale prisen for abonnementet du har vald. Du kan alltids avslutta abonnementet au.",
     "Already a member?": "Allereie medlem?",
     "An error occurred": "",
