--- a/ghost/i18n/locales/no/portal.json
+++ b/ghost/i18n/locales/no/portal.json
@@ -15,6 +15,7 @@
     "Account": "Konto",
     "Account details updated successfully": "Kontodetaljer oppdatert",
     "Account settings": "Kontoinnstillinger",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Etter at prøveperioden er over, vil du bli belastet den vanlige prisen for nivået du har valgt. Du kan alltid avbryte før det.",
     "Already a member?": "Allerede medlem?",
     "An error occurred": "En feil oppstod",
