--- a/ghost/i18n/locales/pl/portal.json
+++ b/ghost/i18n/locales/pl/portal.json
@@ -15,6 +15,7 @@
     "Account": "Konto",
     "Account details updated successfully": "",
     "Account settings": "Ustawienia konta",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Po zakończeniu okresu próbnego zostanie naliczona regularna opłata za wybrany poziom subskrypcji. Pamiętaj, że możesz anulować subskrypcję zanim to nastąpi.",
     "Already a member?": "Masz już konto?",
     "An error occurred": "",
