--- a/ghost/i18n/locales/ro/portal.json
+++ b/ghost/i18n/locales/ro/portal.json
@@ -15,6 +15,7 @@
     "Account": "Cont",
     "Account details updated successfully": "",
     "Account settings": "Setări cont",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "După ce expiră perioada de încercare gratuită, vei fi taxat la prețul obișnuit pentru nivelul pe care l-ai ales. Poți anula în orice moment înainte de aceasta.",
     "Already a member?": "Ești deja membru?",
     "An error occurred": "",
