--- a/ghost/i18n/locales/sl/portal.json
+++ b/ghost/i18n/locales/sl/portal.json
@@ -15,6 +15,7 @@
     "Account": "Račun",
     "Account details updated successfully": "Podatki o računu so bili uspešno posodobljeni",
     "Account settings": "Nastavitve računa",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Po koncu brezplačnega preizkusa se vam zaračuna redna cena za izbran paket. Pred tem jo lahko vedno prekličete.",
     "Already a member?": "Ste že član?",
     "An error occurred": "Prišlo je do napake",
