--- a/ghost/i18n/locales/sq/portal.json
+++ b/ghost/i18n/locales/sq/portal.json
@@ -15,6 +15,7 @@
     "Account": "Llogaria",
     "Account details updated successfully": "",
     "Account settings": "Cilësimet e llogarisë",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Pasi të përfundojë një provë falas, ju do të tarifoheni me çmimin e rregullt për nivelin që keni zgjedhur. Mund të anuloni gjithmonë përpara kësaj.",
     "Already a member?": "Tashme nje antar?",
     "An error occurred": "",
