--- a/ghost/i18n/locales/sr-Cyrl/portal.json
+++ b/ghost/i18n/locales/sr-Cyrl/portal.json
@@ -15,6 +15,7 @@
     "Account": "Налог",
     "Account details updated successfully": "",
     "Account settings": "Подешавања налога",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Након што истекне бесплатан пробни период, наплатиће вам се редовна цена за ниво који сте одабрали. Увек можете отказати пре тог рока.",
     "Already a member?": "Већ сте члан?",
     "An error occurred": "",
