--- a/ghost/i18n/locales/sw/portal.json
+++ b/ghost/i18n/locales/sw/portal.json
@@ -15,6 +15,7 @@
     "Account": "Akaunti",
     "Account details updated successfully": "",
     "Account settings": "Mipangilio ya akaunti",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Baada ya kipindi cha majaribio bila malipo kukamilika, utatozwa bei ya kawaida kwa kiwango ulichochagua. Unaweza kughairi kabla ya hapo.",
     "Already a member?": "Tayari ni mwanachama?",
     "An error occurred": "",
