--- a/ghost/i18n/locales/th/portal.json
+++ b/ghost/i18n/locales/th/portal.json
@@ -15,6 +15,7 @@
     "Account": "บัญชี",
     "Account details updated successfully": "",
     "Account settings": "ตั้งค่าบัญชี",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "หลังจากช่วงทดลองใช้ฟรีสิ้นสุดลง, คุณจะถูกเรียกเก็บเงินตามราคาปกติตามระดับที่คุณเลือกไว้ คุณสามารถยกเลิกก่อนเวลาดังกล่าวได้เสมอ",
     "Already a member?": "เป็นสมาชิกอยู่แล้ว?",
     "An error occurred": "",
