--- a/ghost/i18n/locales/uk/portal.json
+++ b/ghost/i18n/locales/uk/portal.json
@@ -15,6 +15,7 @@
     "Account": "Oбліковий запис",
     "Account details updated successfully": "Дані облікового запису успішно оновлено",
     "Account settings": "Налаштування облікового запису",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Після закінчення безплатного періоду, з тебе буде стягнена вартість за обраний тариф. Ти завжди можеш скасувати послугу до цього часу.",
     "Already a member?": "Вже є учасником?",
     "An error occurred": "Сталася помилка",
