--- a/ghost/i18n/locales/ur/portal.json
+++ b/ghost/i18n/locales/ur/portal.json
@@ -15,6 +15,7 @@
     "Account": "اکاؤنٹ",
     "Account details updated successfully": "",
     "Account settings": "اکاؤنٹ کی ترتیبات",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "جب مفت ڈھانچا ختم ہو جائے گا، آپکو اس ڈھانچے کے لئے عام قیمت چارج ہوگی جس پر آپ نے فیصلہ کیا ہوا ہے۔ آپ ہمیشہ اس سے پہلے منسلک کر سکتے ہیں۔",
     "Already a member?": "پہلے ہی ممبر ہیں؟",
     "An error occurred": "",
