--- a/ghost/i18n/locales/uz/portal.json
+++ b/ghost/i18n/locales/uz/portal.json
@@ -15,6 +15,7 @@
     "Account": "Hisob",
     "Account details updated successfully": "",
     "Account settings": "Hisob sozlamalari",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Bepul sinov muddati tugagandan so'ng, siz tanlagan daraja uchun odatdagi narxdan undiriladi. Undan oldin istalgan vaqtda bekor qilishingiz mumkin.",
     "Already a member?": "Allaqachon a'zomisiz?",
     "An error occurred": "",
