--- a/ghost/i18n/locales/vi/portal.json
+++ b/ghost/i18n/locales/vi/portal.json
@@ -15,6 +15,7 @@
     "Account": "Tài khoản",
     "Account details updated successfully": "Đã cập nhật chi tiết tài khoản thành công",
     "Account settings": "Cài đặt",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Sau khi hết hạn đọc thử miễn phí, sẽ tính phí với gói thành viên mà bạn đã chọn. Bạn có thể hủy gói trước khi hết hạn đọc thử.",
     "Already a member?": "Bạn đã là thành viên?",
     "An error occurred": "Xảy ra lỗi",
