--- a/ghost/i18n/locales/zh/portal.json
+++ b/ghost/i18n/locales/zh/portal.json
@@ -15,6 +15,7 @@
     "Account": "账户",
     "Account details updated successfully": "",
     "Account settings": "账户设置",
+    "Add a personal note": "",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "免费试用结束后，您将被收取所选套餐的标定价格。在此之前，您可以随时取消。",
     "Already a member?": "已经是会员了？",
     "An error occurred": "",
