--- a/ghost/i18n/locales/de-CH/ghost.json
+++ b/ghost/i18n/locales/de-CH/ghost.json
@@ -22,13 +22,13 @@
     "Thank you for signing up to {{siteTitle}}!": "Danke für Ihre Registrierung bei unserer Seite «{{siteTitle}}»!",
     "Thank you for subscribing to {{siteTitle}}!": "Danke für Ihr Abo bei unserer Seite «{{siteTitle}}»!",
     "Thank you for subscribing to {{siteTitle}}.": "Danke für Ihr Abo bei unserer Seite «{{siteTitle}}».",
-    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "Danke für Ihr Abo unserer Seite «{{siteTitle}}». Klicken Sie auf den folgenden Link, um automatisch eingeloggt zu werden:",
+    "Thank you for subscribing to {{siteTitle}}. Tap the link below to be automatically signed in:": "Danke für Ihr Abo bei unserer Seite «{{siteTitle}}». Klicken Sie auf den folgenden Link, um automatisch angemeldet zu werden:",
     "This email address will not be used.": "Diese E-Mail Adresse wird nicht verwendet.",
     "Welcome back to {{siteTitle}}!": "Willkommen zurück auf {{siteTitle}}!",
-    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Willkommen zurück! Benutze diesen Link, um dich sicher bei deinem {{siteTitle}}-Konto einzuloggen:",
-    "You can also copy & paste this URL into your browser:": "Du kannst diese URL auch kopieren und in deine Browserzeile einfügen:",
-    "You will not be signed up, and no account will be created for you.": "Du wirst nicht registriert und es wird kein Konto für dich angelegt.",
-    "You will not be subscribed.": "Du wirst nicht angemeldet.",
+    "Welcome back! Use this link to securely sign in to your {{siteTitle}} account:": "Willkommen zurück! Verwenden Sie diesen Link, um sich sicher bei Ihrem {{siteTitle}}-Konto einzuloggen:",
+    "You can also copy & paste this URL into your browser:": "Sie können diese URL auch kopieren und in Ihre Browserzeile einfügen:",
+    "You will not be signed up, and no account will be created for you.": "Sie werden nicht registriert und es wird kein Konto für Sie angelegt.",
+    "You will not be subscribed.": "Sie werden nicht angemeldet.",
     "You're one tap away from subscribing to {{siteTitle}} — please confirm your email address with this link:": "Sie sind nur noch einen Klick von einem Abo unserer Seite «{{siteTitle}}» entfernt — bitte bestätigen Sie Ihre E-Mail-Adresse mit diesem Link:",
     "You're one tap away from subscribing to {{siteTitle}}!": "Sie sind nur einen Klick von einem Abo unserer Seite «{{siteTitle}}» entfernt!"
 }
