fix typo in translation de_CH on line 77
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/ghost/i18n/locales/de-CH/portal.json
+++ b/ghost/i18n/locales/de-CH/portal.json
@@ -74,7 +74,7 @@
     "Failed to process checkout, please try again": "Zahlungsabwicklung fehlgeschalgen. Bitte versuchen Sie es erneut.",
     "Failed to send magic link email": "Anmelde-Link konnte nicht versendet werden",
     "Failed to send verification email": "Bestätigungsmail konnte nicht versendet werden",
-    "Failed to sign up, please try again": "Anmeldung ist fehlgeschlagen. Bitten versuchen Sie es erneut",
+    "Failed to sign up, please try again": "Anmeldung ist fehlgeschlagen. Bitte versuchen Sie es erneut",
     "Failed to update account data": "Kontodaten konnten nicht aktualisiert werden",
     "Failed to update account details": "Kontodetails konnten nicht aktualisiert werden",
     "Failed to update billing information, please try again": "Zahlungsinformationen konnten nicht aktualisiert werden. Bitte versuchen Sie es erneut",
