fix typo on line 181 of de_CH translation
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/ghost/i18n/locales/de-CH/portal.json
+++ b/ghost/i18n/locales/de-CH/portal.json
@@ -178,7 +178,7 @@
     "Too many different sign-in attempts, try again in {{number}} days": "Zu viele verschiedene Anmeldeversuche. Versuchen Sie es in {{number}} Tagen erneut.",
     "Too many different sign-in attempts, try again in {{number}} hours": "Zu viele verschiedene Anmeldeversuche. Versuchen Sie es in {{number}} Stunden erneut.",
     "Too many different sign-in attempts, try again in {{number}} minutes": "Zu viele verschiedene Anmeldeversuche. Versuchen Sie es in {{number}} Minuten erneut.",
-    "Too many sign-up attempts, try again later": "Zi viele Anmeldeversuche. Versuchen Sie es später erneut.",
+    "Too many sign-up attempts, try again later": "Zu viele Anmeldeversuche. Versuchen Sie es später erneut.",
     "Try free for {{amount}} days, then {{originalPrice}}.": "Probieren Sie uns für {{amount}} Tage kostenlos aus. Danach folgt ein Abo zum regulären Preis von {{originalPrice}}.",
     "Unable to initiate checkout session": "Zahlungsabwicklung konnte nicht gestartet werden",
     "Unlock access to all newsletters by becoming a paid subscriber.": "Schalten Sie mit einem Abo den Zugang zu allen Newslettern frei.",
