fix typo in line 73 & 74 of translation de_CH
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/ghost/i18n/locales/de-CH/portal.json
+++ b/ghost/i18n/locales/de-CH/portal.json
@@ -70,8 +70,8 @@
     "Expires {{expiryDate}}": "Läuft am {{expiryDate}} ab",
     "Failed to cancel subscription, please try again": "Abonnement konnte nicht beendet werden. Bitte versuchen Sie es erneut.",
     "Failed to log in, please try again": "Login fehlgeschlagen. Bitte versuchen Sie es erneut.",
-    "Failed to log out, please try again": "Abmelden fehlgeschalgen. Bitte versuchen Sie es erneut.",
-    "Failed to process checkout, please try again": "Zahlungsabwicklung fehlgeschalgen. Bitte versuchen Sie es erneut.",
+    "Failed to log out, please try again": "Abmelden fehlgeschlagen. Bitte versuchen Sie es erneut.",
+    "Failed to process checkout, please try again": "Zahlungsabwicklung fehlgeschlagen. Bitte versuchen Sie es erneut.",
     "Failed to send magic link email": "Anmelde-Link konnte nicht versendet werden",
     "Failed to send verification email": "Bestätigungsmail konnte nicht versendet werden",
     "Failed to sign up, please try again": "Anmeldung ist fehlgeschlagen. Bitte versuchen Sie es erneut",
